controlaula (1.5.11-1) unstable; urgency=low

  * Dependencies fix.
  * Light refactorization

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Sun, 19 Dec 2010 11:04:17 +0100

controlaula (1.5.10-1) unstable; urgency=low

  * Internationalization.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 15 Dec 2010 09:41:43 +0100

controlaula (1.5.9-1) unstable; urgency=low

  * Optimized ltsp detection.
  * Enable/disable chat user icon

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 13 Dec 2010 14:01:15 +0100

controlaula (1.5.8.1) unstable; urgency=low

  * Optimized classroom setups.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Fri, 03 Dec 2010 11:20:02 +0100

controlaula (1.5.7-1) unstable; urgency=low

  * Improving comet behaviour.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Thu, 02 Dec 2010 19:41:19 +0100

controlaula (1.5.6-1) unstable; urgency=low

  * More LTSP bug fixing.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Tue, 30 Nov 2010 13:47:47 +0100

controlaula (1.5.5-1) unstable; urgency=low

  * LTSP bug fix.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 29 Nov 2010 14:04:28 +0100

controlaula (1.5.4-1) unstable; urgency=low

  * Chat enabling/disabling for students.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Fri, 26 Nov 2010 08:59:48 +0100

controlaula (1.5.3-1) unstable; urgency=low

  * Some bug fixing 

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 17 Nov 2010 20:07:07 +0100

controlaula (1.5.2-1) unstable; urgency=low

  * Chat logging added.

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Thu, 11 Nov 2010 12:48:46 +0100

controlaula (1.5.1-1) unstable; urgency=low

  * Frontend changed to jquery
  * generation of ltsp-controlaula package

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 04 Oct 2010 13:20:38 +0200

controlaula (1.5.0-1) unstable; urgency=low

  * Added firefox/iceweasel extension
  * Cleaning up some bugs
